legacy/1.0/kubernetes/applications/amcdv/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amcdv
  namespace: apps
spec:
  selector:
    matchLabels:
      app: "amcdv"
  replicas: 1
  template:
    metadata:
      labels:
        app: amcdv
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 10
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: amcdv
          image: ghcr.io/amcdv/outdoors-connector-scraper:0.3.0
          resources:
            requests:
              memory: 512Mi
              cpu: 500m
              ephemeral-storage: 8Gi
            limits:
              memory: 512Mi
              cpu: 500m
              ephemeral-storage: 8Gi
          ports:
            - containerPort: 8081
              name: web
