legacy/1.0/kubernetes/applications/amcdv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amcdv-svc
  namespace: apps
  labels:
    app: amcdv
spec:
  ports:
    - port: 8081
      name: web
  selector:
    app: amcdv
