legacy/1.0/kubernetes/applications/amcdv/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amcdv-ingress
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - amcdv.mcmumf.dev
      secretName: amcdv.mcmumf.dev-tls
  rules:
    - host: amcdv.mcmumf.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: amcdv-svc
                port:
                  number: 8081
